examples/suggest_test.expected
Error: unknown variable 'greting' 芒聙聰 did you mean 'greeting'?
  --> line 2:9
   |
2  | let x = greting
   |         ^
Warning: non-exhaustive match 芒聙聰 missing: Blue
  --> line 2:24
   |
2  | fn describe(c) = match c {
   |                        ^
suggest_test: all checks passed
